<resources>
    <string name="app_name">BookStore</string>
    <string name="title_news">Новости</string>
    <string name="title_books">Книги</string>
    <string name="title_accaunt">Кабинет</string>
    <string name="title_activity_login">Вход</string>
    <string name="title_activity_logout">Выход</string>
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войдите или зарегестрируйтесь</string>
    <string name="action_sign_in_short">Вход</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Не правильный логин</string>
    <string name="invalid_password">Пароль должен быть больше 5 знаков</string>
    <string name="login_failed">"Вход провален"</string>
    <string name="title_contacts">Контакты</string>
    <string name="text_title">Контакты</string>
    <string name="text_phone">Телефон: 8 (777) 777 77 77</string>
    <string name="text_address">Адрес: ул Толе би, д 49</string>
</resources>
