<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ContactsActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_contacts"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_below="@+id/toolbar"/>

            <TextView
                android:id="@+id/textPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_below="@+id/textTitle"
                android:text="@string/text_phone"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/textAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textPhone"
                android:padding="10dp"
                android:text="@string/text_address"
                android:textSize="15sp"/>
        <com.yandex.mapkit.mapview.MapView
            android:id="@+id/map"
            android:layout_below="@+id/textAddress"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</RelativeLayout>